objects/Phase_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Expected_Book_Date__c</fullName>
        <formula>Parent_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Expected_Product__c</fullName>
        <formula>Parent_Opportunity__r.Expected_Product__c</formula>
        <label>Parent Expected Product ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Expected_Service__c</fullName>
        <formula>Parent_Opportunity__r.Expected_Service__c</formula>
        <label>Parent Expected Service ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Forecast_Status__c</fullName>
        <formula>TEXT(Parent_Opportunity__r.Forecast_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Status__c</fullName>
        <formula>TEXT(Phase_Opportunity__r.Opportunity_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Phases</relationshipLabel>
        <relationshipName>R00N30000000gPRhEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Stage__c</fullName>
        <formula>TEXT(Parent_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Top Level Phase</relationshipLabel>
        <relationshipName>R00N30000000gPRiEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Phase</label>
    <nameField>
        <displayFormat>Cisco-{0000}</displayFormat>
        <label>Phase ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>